--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/622/622669.png" />
   <link href="/src/index.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>MiniSearch</title>
 </head>
 
 <body>
